--- a/school-exacce869fdk8jkpjn4f4zt45w/school_portal/views/school_portal_templates.xml
+++ b/school-exacce869fdk8jkpjn4f4zt45w/school_portal/views/school_portal_templates.xml
@@ -141,7 +141,7 @@
           <t>
             Student
           </t>
-          <em t-esc="student.name"/>
+          <t t-esc="student.name"/>
         </h2>
       </div>
 
