--- a/school/views/student.xml
+++ b/school/views/student.xml
@@ -98,11 +98,13 @@
                             <field name="date_of_birth"/>
                             <field name="company_id"/>
                             <field name="teacher_id"/>
+                            <field name="created_user_id"/>
                         </group>
                         <group>
                             <field name="age"/>
                             <field name="gender"/>
                             <field name="teacher_id"/>
+                            <field name="user_id"/>
                             <button name="button_save" string="Save" class="oe_highlight" type="object"/>
                             <button name="%(action_school_list)d" string="Action Save" type="action"
                                     class="oe_highlight"/>
