--- a/school/views/sale_order_payment.xml
+++ b/school/views/sale_order_payment.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <data>
-        <!-- Inherit the sale order form view to add the button -->
         <record id="school_sale_order_view_inherit" model="ir.ui.view">
             <field name="name">sale.order.inherit.school</field>
             <field name="model">sale.order</field>
@@ -10,6 +9,7 @@
                  <header position="inside">
                     <button name="action_register_payment" type="object" string="Register Payment"
                            attrs="{'invisible': [('can_register_payment', '=', False)]}"/>
+                     <button name="print_report" id="action_print_report" type="object" string='Print'/>
                 </header>
                 <xpath expr="//sheet" position="inside">
                     <group>
