--- a/school/views/student.xml
+++ b/school/views/student.xml
@@ -97,13 +97,13 @@
                             <field name="school_standard" />
                             <field name="date_of_birth"/>
                             <field name="company_id"/>
-                            <field name="teacher_id"/>
                             <field name="partner_id"/>
                         </group>
                         <group>
                             <field name="age"/>
                             <field name="gender"/>
-                            <field name="teacher_id"/>
+                            <field name="teacher_id" options="{'no_create': True}"/>
+                            <field name="school_id" options="{'no_create': True}"/>
 <!--                            <field name="user_id"/>-->
                             <button name="button_save" string="Save" class="oe_highlight" type="object"/>
                             <!--<field name="average_ids"/>-->
