--- a/school/views/teacher_staff.xml
+++ b/school/views/teacher_staff.xml
@@ -91,7 +91,8 @@
                             <field name="dob"/>
                             <field name="age"/>
                             <field name="lecture"/>
-<!--                            <field name="student_id"/>-->
+                            <field name="student_id"/>
+                            <field name="school_id"/>
                         </group>
                     </group>
                     <notebook>
