--- a/school/views/admission.xml
+++ b/school/views/admission.xml
@@ -96,7 +96,7 @@
                     </group>
                     <notebook>
                         <page string="Personal Information">
-                            <group>git
+                            <group>
                                 <group>
                                     <field name="date_of_birth"/>
                                     <field name="age"/>
